# oop-workbook

./: CLAUDE.md  README.md  bot_exercises.md  conftest.py  dictionary.md  grading.py  pyproject.toml  ruff.toml  todo.md
.github/workflows/: grading.yml
00_class_basics/: basics.py
00_class_basics/00_class_docs/: class.md
00_class_basics/00_class_intro/: class1.md
00_class_basics/00_docs/: basics.py
00_class_basics/01_person/: person.md  person.py  test_person.py
00_class_basics/02_animal/: animal.md  animal.py  test_animal.py
00_class_basics/03_car/: car-hint.md  car.md  car.py  test_car.py
00_class_basics/04_bank/: bank-hint.md  bank.md  bank.py  test_bank.py
00_class_basics/05_library/: library.md  library.py  test_library.py
00_class_basics/06_student/: student.md  student.py  test_student.py
00_class_basics/07_triangle/: test_triangle.py  triangle.md  triangle.py
01_person/: person-hint.md
02_animal/: animal-hint.md  animal.md
03_car/: car-hint.md  car.md
04_bank/: bank-hint.md  bank.md
05_library/: library-hint.md  library.md
06_student/: student-hint.md
1) person/: person-hint.md  person.md
1) student/: student.md
10_oop_encapsulation/10_docs/: bank_account_getters_setters.py  bank_account_properties.py
10_oop_encapsulation/10_encapsulation_docs/: encapsulation.md  (+1 more)
11_employee/: employee-hint.md
2) animal/: animal-hint.md  animal.md
21_clock/: clock-hint.md  clock.md
22_matrix/: matrix-hint.md
3) car/: car.md
4) bank/: bank-hint.md
5) employee/: employee.md
slides/: CLAUDE.md
tests/: grading.py
(+175 files in other folders)
